added amqp plugin